--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
+*,
+::before,
+::after {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+html,
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+body {
+  font-size: 1.6rem;
+  width: 100vw;
+  height: 100%;
+  background-color: #fff;
+}
+
+/* Scrollbar styles */
+/* width */
+body::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 50%;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 25px;
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
