--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -1,5 +1,75 @@
+/* ----Mobile-First---- */
+/* Starting from the smallest, iphone 5/SE size: 320x568*/
 #about-me {
+  position: relative;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 7vh;
+}
+
+.contents-ctr {
+  width: 88%;
+  position: relative;
+}
+
+.contents-ctr .title {
+  font-size: 2.6rem;
+  font-weight: 300;
+  margin-top: 3rem;
+  margin-left: 2rem;
+}
+
+.bio-bg,
+.bio {
+  width: 100%;
+  min-height: 32rem;
+  overflow: hidden;
+  padding: 3rem 1.5rem;
+  position: absolute;
+  top: 3.8vh;
+  left: 0;
+}
+
+.bio-bg {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 4px;
+  z-index: -1;
+}
+
+.bio {
+  color: #fff;
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  z-index: 2;
+}
+
+.bio .languages,
+.bio .tools {
+  color: #000;
+  margin-top: 2rem;
+}
+
+.languages h4,
+.tools h4 {
+  padding-bottom: 0.3rem;
+  font-size: 1.3rem;
+  font-weight: 100;
+}
+
+.languages span,
+.tools span {
+  margin: 0 0.8rem;
+  font-size: 0.95rem;
+}
+
+#about-me .vert-bg {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+
+#about-me .horiz-bg {
+  display: none;
 }
