--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -4,7 +4,8 @@
   color: #fff;
   width: 100vw;
   height: 8vh;
-  max-height: 75px;
+  max-height: 45px;
+  min-height: 40px;
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -13,8 +14,8 @@
 }
 
 .logo img {
-  width: 70px;
-  height: 7.5vh;
+  width: 60px;
+  height: 100%;
   max-height: 75px;
   margin-left: 0.5rem;
 }
@@ -34,7 +35,7 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  top: 7.2vh;
+  top: 100%;
   font-size: 1.8rem;
   letter-spacing: 0.1rem;
 }
