--- a/src/components/my-work/MyWork.css
+++ b/src/components/my-work/MyWork.css
@@ -1,8 +1,13 @@
 /* ----Mobile-First---- */
 /* Starting from the smallest, iphone 5/SE size: 320x568*/
 #my-work {
+  position: relative;
   width: 100vw;
   height: 100vh;
+  min-width: 320px;
+  min-height: 568px;
+  max-height: 568px;
+  overflow: hidden;
   padding-top: 8vh;
   display: flex;
   flex-direction: column;
@@ -23,7 +28,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-around;
-  margin-top: 6vh;
+  margin-top: 6%;
 }
 
 .vert-up .title {
@@ -33,6 +38,6 @@
 }
 
 #my-work .work-space-pic {
-  width: 40vw;
-  height: 30vh;
+  width: 45%;
+  height: 100%;
 }
