--- a/src/components/my-work/Project.css
+++ b/src/components/my-work/Project.css
@@ -1,7 +1,8 @@
 /* ----Mobile-First---- */
 /* Starting from the smallest, iphone 5/SE size: 320x568*/
 .project {
-  width: 72%;
+  width: 75%;
+  max-width: 200px;
   margin: auto;
   margin-bottom: 2.5rem;
   text-align: center;
@@ -30,5 +31,6 @@
 }
 
 .project a:hover {
-  font-weight: 400;
+  font-weight: 500;
+  box-shadow: 8px 4px 4px gray;
 }
