Initialize footer and refactor a bit more about-me and my-work sections for mobile responsiveness

--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -11,26 +11,27 @@
   padding-top: 8%;
 }
 
-.contents-ctr {
-  width: 88%;
-  max-width: 300px;
-  position: relative;
-}
-
-.contents-ctr .title {
+#about-me .title {
   font-size: 2.6rem;
   font-weight: 300;
-  margin-top: 16%;
+  margin-top: 4rem;
+  margin-bottom: 1rem;
   margin-left: 2rem;
+}
+
+.contents-ctr {
+  width: 89%;
+  max-width: 300px;
+  position: relative;
 }
 
 .bio-bg,
 .bio {
   width: 100%;
-  min-height: 67%;
-  padding: 10% 1.5rem;
+  min-height: 75.5%;
+  padding: 1rem;
   position: absolute;
-  top: 3.8vh;
+  top: 0;
   left: 0;
 }
 
@@ -42,7 +43,7 @@
 
 .bio {
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   letter-spacing: 0.1rem;
   z-index: 2;
 }
@@ -54,7 +55,7 @@
 }
 
 .bio .tools {
-  margin-top: 1.5rem;
+  margin-top: 1.2rem;
 }
 
 .languages h4,
