--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,12 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+/* Allow scroll on x axis up to 320px width*/
+@media screen and (max-width: 319px) {
+  html,
+  body {
+    overflow-y: scroll;
+    overflow-x: scroll;
+  }
+}
