--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,13 +6,13 @@
   height: 100vh;
   min-width: 320px;
   min-height: 568px;
-  max-height: 568px;
+  max-height: 670px;
   overflow: hidden;
   padding-top: 8%;
 }
 
 .contents {
-  margin-top: 16%;
+  margin-top: 20%;
   width: 100%;
   min-height: 295px;
   position: relative;
@@ -54,7 +54,7 @@
   color: #9ac465;
   font-size: 3.8rem;
   text-align: center;
-  letter-spacing: 0.4rem;
+  letter-spacing: 0.3rem;
 }
 
 .card-contents h1 span {
@@ -103,7 +103,7 @@
 
 .quote p {
   text-align: right;
-  margin-top: 0.2em;
+  margin-top: 0.2rem;
   margin-right: 2rem;
 }
 
@@ -139,4 +139,232 @@
   transform: rotate(-60deg);
   bottom: -26%;
   left: 65%;
+}
+
+/*---Mobile-Media-Querie-Rules--- */
+/* For screen (width: 360px and more, height: 640px (in mind)*/
+@media screen and (min-width: 358px) {
+  .contents {
+    margin-top: 22%;
+  }
+
+  .card-contents h2 {
+    font-size: 2.2rem;
+  }
+
+  .card-contents h1 {
+    font-size: 4rem;
+  }
+
+  .hello span {
+    margin-left: 2.8rem;
+  }
+
+  .contents .links {
+    bottom: 3%;
+    font-size: 2.4rem;
+  }
+
+  .quote {
+    font-size: 1.8rem;
+    padding: 0 1.5rem;
+  }
+
+  .k * {
+    width: 8rem;
+  }
+
+  .k .diag-1 {
+    top: -6%;
+    left: 75%;
+  }
+
+  .k .diag-2 {
+    bottom: -21%;
+    left: 58%;
+  }
+}
+
+/* For screen (width: 360px and more, height: 760px*/
+@media screen and (min-width: 358px) and (min-height: 758px) {
+  .contents {
+    margin-top: 28%;
+  }
+
+  .quote {
+    bottom: 2%;
+  }
+}
+
+/* For screen (width: 360px and more, height: 780px*/
+/* @media screen and (min-width: 358px) and (min-height: 778px) {
+} */
+
+/* For screen (width: 375px and more, height: 667px (in mind)*/
+@media screen and (min-width: 374px) {
+  .card-contents h2 {
+    font-size: 2.3rem;
+  }
+
+  .card-contents h1 {
+    font-size: 4.3rem;
+  }
+
+  .contents .links {
+    font-size: 2.6rem;
+  }
+
+  .quote {
+    font-size: 1.9rem;
+  }
+
+  .k * {
+    width: 8.5rem;
+  }
+}
+
+/* For screen (width: 375px and more, height: 812px*/
+/* @media screen and (min-width: 374px) and (min-height: 810px) {
+} */
+
+/* For screen (width: 414px and more, height: 736px (in mind)*/
+/* @media screen and (min-width: 412px) {
+} */
+
+/* For screen (width: 414px and more, height: 896px*/
+/* @media screen and (min-width: 412px) and (min-height: 894px) {
+} */
+
+/* Styles for mobiles in landscape mode that has min-height of 320px*/
+@media screen and (min-height: 319px) and (orientation: landscape) {
+  #home {
+    height: 100vw;
+    max-height: 580px;
+  }
+
+  .contents {
+    width: 70%;
+    margin-left: 28%;
+    margin-top: 12%;
+  }
+
+  .card-contents h2 {
+    font-size: 2.2rem;
+  }
+
+  .card-contents h1 {
+    font-size: 4.2rem;
+  }
+
+  .hello span {
+    margin-left: 1.5rem;
+  }
+
+  .contents .links {
+    font-size: 2.4rem;
+    padding-left: 3rem;
+  }
+
+  .quote p {
+    margin-top: 0.5rem;
+  }
+
+  .k {
+    width: 60%;
+  }
+
+  .k .vert-line {
+    transform: rotate(14deg);
+    left: 2%;
+  }
+
+  .k .diag-1 {
+    transform: rotate(45deg);
+    top: -22vh;
+    left: 52%;
+  }
+
+  .k .diag-2 {
+    height: 82%;
+    transform: rotate(-48deg);
+    bottom: -26%;
+    left: 52%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 760px) and (orientation: landscape) {
+  .contents {
+    width: 60%;
+    margin-left: 35%;
+  }
+
+  .hello {
+    margin-left: -4rem;
+  }
+
+  .hello span {
+    margin-left: 2rem;
+  }
+
+  .k {
+    top: -85%;
+  }
+
+  .k .vert-line {
+    left: 12%;
+  }
+
+  .k .diag-2 {
+    bottom: -28%;
+    left: 52%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+@media screen and (min-height: 375px) and (min-width: 667px) and (orientation: landscape) {
+  .k {
+    top: -80%;
+  }
+
+  .k .diag-2 {
+    bottom: -29%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+@media screen and (min-height: 375px) and (min-width: 812px) and (orientation: landscape) {
+  .k {
+    top: -86%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+@media screen and (min-height: 414px) and (min-width: 736px) and (orientation: landscape) {
+  .contents {
+    width: 60%;
+    margin-left: 35%;
+  }
+
+  .k .vert-line {
+    left: 10%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+@media screen and (min-height: 414px) and (min-width: 896px) and (orientation: landscape) {
+  .contents {
+    width: 55%;
+    margin-left: 35%;
+  }
+
+  .k * {
+    width: 9rem;
+  }
+
+  .k .vert-line {
+    height: 130%;
+    left: 16%;
+    top: -8%;
+  }
 }
