--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -1,4 +1,4 @@
-/* ----Mobile-First---- */
+/* ----Mobile-First-Portrait-Mode-- */
 /* Starting from the smallest, iphone 5/SE size: 320x568*/
 #about-me {
   position: relative;
@@ -6,7 +6,7 @@
   height: 100vh;
   min-width: 320px;
   min-height: 568px;
-  max-height: 568px;
+  max-height: 670px;
   overflow: hidden;
   padding-top: 8%;
 }
@@ -21,14 +21,16 @@
 
 .contents-ctr {
   width: 89%;
+  height: 80%;
   max-width: 300px;
   position: relative;
+  top: 0%;
 }
 
 .bio-bg,
 .bio {
   width: 100%;
-  min-height: 75.5%;
+  min-height: 75%;
   padding: 1rem;
   position: absolute;
   top: 0;
@@ -37,15 +39,16 @@
 
 .bio-bg {
   background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 4px;
-  z-index: -1;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  z-index: 2;
 }
 
 .bio {
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.46rem;
   letter-spacing: 0.1rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 .bio .languages,
@@ -81,4 +84,261 @@
 
 #about-me .horiz-bg {
   display: none;
+}
+
+/*---Mobile-Media-Querie-Rules--- */
+/* For screen (width: 360px and more, height: 640px (in mind)*/
+@media screen and (min-width: 358px) {
+  #about-me .title {
+    font-size: 2.8rem;
+  }
+
+  .bio-bg,
+  .bio {
+    min-height: 77.5%;
+  }
+
+  .bio {
+    font-size: 1.7rem;
+  }
+
+  .languages h4,
+  .tools h4 {
+    font-size: 1.4rem;
+  }
+
+  .languages span,
+  .tools span {
+    font-size: 1.1rem;
+  }
+}
+
+/* For screen (width: 360px and more, height: 760px*/
+@media screen and (min-width: 358px) and (min-height: 758px) {
+  #about-me .title {
+    margin-top: 5.5rem;
+  }
+}
+
+/* For screen (width: 360px and more, height: 780px*/
+/* @media screen and (min-width: 358px) and (min-height: 778px) {
+} */
+
+/* For screen (width: 375px and more, height: 667px (in mind)*/
+@media screen and (min-width: 374px) {
+  .bio-bg,
+  .bio {
+    min-height: 80%;
+  }
+
+  .bio {
+    font-size: 1.8rem;
+  }
+
+  .languages h4,
+  .tools h4 {
+    font-size: 1.5rem;
+  }
+
+  .languages span,
+  .tools span {
+    font-size: 1.2rem;
+  }
+}
+
+/* For screen (width: 375px and more, height: 812px*/
+@media screen and (min-width: 374px) and (min-height: 810px) {
+  #about-me .title {
+    margin-top: 4.5rem;
+  }
+}
+
+/* For screen (width: 414px and more, height: 736px (in mind)*/
+@media screen and (min-width: 412px) {
+  .languages,
+  .tools {
+    margin-left: 2rem;
+  }
+}
+
+/* For screen (width: 414px and more, height: 896px*/
+@media screen and (min-width: 412px) and (min-height: 894px) {
+  .contents-ctr {
+    max-width: 350px;
+  }
+
+  .bio-bg,
+  .bio {
+    min-height: 76.5%;
+  }
+}
+
+/* ----Mobile-Landscape---- */
+/* Styles for mobiles in landscape mode that has min-height of 300px*/
+@media screen and (min-height: 300px) and (min-width: 568px) and (orientation: landscape) {
+  #about-me {
+    min-height: 582px;
+  }
+
+  #about-me .title {
+    margin-bottom: 2rem;
+    margin-left: 4rem;
+  }
+
+  .contents-ctr {
+    max-width: 480px;
+  }
+
+  .bio-bg,
+  .bio {
+    min-height: 71%;
+  }
+
+  .bio .languages,
+  .bio .tools {
+    margin-left: 4rem;
+  }
+
+  .bio .tools {
+    margin-top: 1.6rem;
+  }
+
+  .languages h4,
+  .tools h4 {
+    font-size: 1.6rem;
+  }
+
+  .languages span,
+  .tools span {
+    margin: 0 1rem;
+    font-size: 1.3rem;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 640px) and (orientation: landscape) {
+  #about-me {
+    min-height: 590px;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 760px) and (orientation: landscape) {
+  #about-me .title {
+    margin-top: 2rem;
+    margin-left: 2rem;
+  }
+
+  .contents-ctr {
+    margin-left: 4vw;
+  }
+
+  .bio-bg,
+  .bio {
+    min-height: 71%;
+  }
+
+  .bio-bg {
+    background-color: rgb(190, 202, 164);
+    border-radius: 8px;
+    z-index: 1;
+  }
+
+  .bio {
+    color: #000;
+  }
+
+  #about-me .vert-bg {
+    display: none;
+  }
+
+  #about-me .horiz-bg {
+    display: block;
+    width: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+@media screen and (min-height: 375px) and (min-width: 667px) and (orientation: landscape) {
+  #about-me .title {
+    margin-top: 2rem;
+    margin-left: 2rem;
+  }
+
+  .bio .languages,
+  .bio .tools {
+    margin-left: 6rem;
+    margin-top: 2.5rem;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+/* @media screen and (min-height: 375px) and (min-width: 812px) and (orientation: landscape) {
+} */
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+@media screen and (min-height: 414px) and (min-width: 736px) and (orientation: landscape) {
+  #about-me .title {
+    margin-top: 2rem;
+    margin-left: 2rem;
+  }
+
+  .contents-ctr {
+    margin-left: 4vw;
+  }
+
+  .bio-bg,
+  .bio {
+    min-height: 71%;
+  }
+
+  .bio-bg {
+    background-color: rgb(190, 202, 164);
+    border-radius: 8px;
+    z-index: 1;
+  }
+
+  .bio {
+    color: #000;
+  }
+
+  .bio .languages,
+  .bio .tools {
+    margin-left: 4rem;
+  }
+
+  #about-me .vert-bg {
+    display: none;
+  }
+
+  #about-me .horiz-bg {
+    display: block;
+    width: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+@media screen and (min-height: 414px) and (min-width: 896px) and (orientation: landscape) {
+  #about-me .title {
+    margin-top: 1rem;
+    margin-left: 4rem;
+  }
+
+  .contents-ctr {
+    margin-left: 10vw;
+  }
+
+  .bio-bg,
+  .bio {
+    min-height: 75%;
+    padding: 1.5rem 2rem;
+  }
 }
