--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -196,10 +196,6 @@
   }
 }
 
-/* For screen (width: 360px and more, height: 780px*/
-/* @media screen and (min-width: 358px) and (min-height: 778px) {
-} */
-
 /* For screen (width: 375px and more, height: 667px (in mind)*/
 @media screen and (min-width: 374px) {
   .card-contents h2 {
@@ -223,20 +219,9 @@
   }
 }
 
-/* For screen (width: 375px and more, height: 812px*/
-/* @media screen and (min-width: 374px) and (min-height: 810px) {
-} */
-
-/* For screen (width: 414px and more, height: 736px (in mind)*/
-/* @media screen and (min-width: 412px) {
-} */
-
-/* For screen (width: 414px and more, height: 896px*/
-/* @media screen and (min-width: 412px) and (min-height: 894px) {
-} */
-
+/* ----Mobile-Landscape---- */
 /* Styles for mobiles in landscape mode that has min-height of 320px*/
-@media screen and (min-height: 319px) and (orientation: landscape) {
+@media screen and (min-height: 319px) and (min-width: 568px) and (orientation: landscape) {
   #home {
     height: 100vw;
     max-height: 580px;
