--- a/src/components/my-work/MyWork.css
+++ b/src/components/my-work/MyWork.css
@@ -6,7 +6,7 @@
   height: 100vh;
   min-width: 320px;
   min-height: 568px;
-  max-height: 568px;
+  max-height: 650px;
   overflow: hidden;
   padding-top: 8vh;
   display: flex;
@@ -40,4 +40,160 @@
 #my-work .work-space-pic {
   width: 45%;
   height: 100%;
+}
+
+/*---Mobile-Media-Querie-Rules--- */
+/* For screen (width: 360px and more, height: 640px (in mind)*/
+/* @media screen and (min-width: 358px) {
+} */
+
+/* For screen (width: 360px and more, height: 760px*/
+/* @media screen and (min-width: 358px) and (min-height: 758px) {
+} */
+
+/* For screen (width: 360px and more, height: 780px*/
+/* @media screen and (min-width: 358px) and (min-height: 778px) {
+} */
+
+/* For screen (width: 375px and more, height: 667px (in mind)*/
+/* @media screen and (min-width: 374px) {
+} */
+
+/* For screen (width: 375px and more, height: 812px*/
+/* @media screen and (min-width: 374px) and (min-height: 810px) {
+} */
+
+/* For screen (width: 414px and more, height: 736px (in mind)*/
+@media screen and (min-width: 412px) {
+  #my-work {
+    max-height: 700px;
+  }
+
+  #my-work .title {
+    font-size: 2.8rem;
+  }
+}
+
+/* For screen (width: 414px and more, height: 896px*/
+@media screen and (min-width: 412px) and (min-height: 894px) {
+  #my-work {
+    max-height: 720px;
+  }
+}
+
+/* ----Mobile-Landscape---- */
+/* Styles for mobiles in landscape mode that has min-height of 300px*/
+@media screen and (min-height: 300px) and (min-width: 568px) and (orientation: landscape) {
+  #my-work {
+    min-height: 680px;
+    max-height: 680px;
+  }
+
+  .vert-up {
+    width: 80%;
+  }
+
+  .vert-up .title {
+    padding: 3rem 0;
+  }
+
+  #my-work .work-space-pic {
+    width: 40%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 640px) and (orientation: landscape) {
+  #my-work {
+    min-height: 740px;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 760px) and (orientation: landscape) {
+  #my-work {
+    min-height: 568px;
+    max-height: 500px;
+    padding: 4rem;
+    flex-direction: row;
+    justify-content: space-around;
+    background: linear-gradient(
+      -30deg,
+      #fff 0,
+      #fff 40%,
+      #e2dfdf 40%,
+      #e2dfdf 58%,
+      #fff 58%,
+      #fff 100%
+    );
+  }
+
+  .horiz-left {
+    width: 35%;
+    flex-direction: column;
+    margin-top: -2rem;
+  }
+
+  .horiz-left .title {
+    text-align: right;
+    margin-right: -6vw;
+  }
+
+  #my-work .work-space-pic {
+    width: 100%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+@media screen and (min-height: 375px) and (min-width: 667px) and (orientation: landscape) {
+  #my-work {
+    min-height: 550px;
+    max-height: 550px;
+    padding: 3rem;
+    flex-direction: row;
+    justify-content: space-around;
+    background: linear-gradient(
+      -30deg,
+      #fff 0,
+      #fff 40%,
+      #e2dfdf 40%,
+      #e2dfdf 58%,
+      #fff 58%,
+      #fff 100%
+    );
+  }
+
+  .horiz-left {
+    width: 38%;
+    flex-direction: column;
+    margin-top: -2rem;
+  }
+
+  .horiz-left .title {
+    text-align: right;
+    margin-right: -6vw;
+  }
+
+  #my-work .work-space-pic {
+    width: 100%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+@media screen and (min-height: 375px) and (min-width: 812px) and (orientation: landscape) {
+  .horiz-left {
+    width: 35%;
+    margin-top: 0;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+/* @media screen and (min-height: 414px) and (min-width: 736px) and (orientation: landscape) {
+} */
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+@media screen and (min-height: 414px) and (min-width: 896px) and (orientation: landscape) {
+  #my-work {
+    min-height: 620px;
+  }
 }
