--- a/src/components/contact-me/ContactMe.css
+++ b/src/components/contact-me/ContactMe.css
@@ -47,7 +47,7 @@ input::-webkit-scrollbar-thumb:hover {
   height: 100vh;
   min-width: 320px;
   min-height: 568px;
-  max-height: 568px;
+  max-height: 650px;
   padding-top: 8vh;
 }
 
@@ -60,11 +60,11 @@ input::-webkit-scrollbar-thumb:hover {
 
 .form {
   background-color: #28282b;
-  width: 95%;
+  width: 90%;
   max-width: 500px;
   height: 63%;
   padding: 1rem 0;
-  margin: auto;
+  margin-left: 4vw;
   margin-top: 2rem;
   position: relative;
   color: #fff;
@@ -147,7 +147,8 @@ form button:hover {
   font-size: 1.7rem;
   display: inline-block;
   height: 100px;
-  margin-left: 28%;
+  float: right;
+  margin-right: 4rem;
   margin-top: 1.2rem;
 }
 
@@ -199,3 +200,166 @@ form button:hover {
 .userRespond p {
   font-size: 2.2rem;
 }
+
+/*---Mobile-Media-Querie-Rules--- */
+/* For screen (width: 360px and more, height: 640px (in mind)*/
+@media screen and (min-width: 358px) {
+  #contact-me .title {
+    font-size: 3rem;
+  }
+
+  .form {
+    height: 65%;
+  }
+
+  form label {
+    font-size: 2.4rem;
+  }
+
+  form input,
+  form textarea {
+    font-size: 2rem;
+  }
+
+  .user-info input:first-of-type {
+    margin-top: 1.5rem;
+  }
+
+  .user-msg {
+    height: 60%;
+    margin: 1.8rem auto;
+  }
+
+  .user-msg textarea {
+    height: 70%;
+    margin: 0.8rem 0;
+  }
+
+  form button {
+    font-size: 1.6rem;
+    padding: 0.2rem 1.8rem;
+    bottom: 5%;
+  }
+
+  .cm-vert-btm {
+    font-size: 1.8rem;
+    margin-top: 1.5rem;
+  }
+}
+
+/* For screen (width: 360px and more, height: 760px*/
+/* @media screen and (min-width: 358px) and (min-height: 758px) {
+} */
+
+/* For screen (width: 360px and more, height: 780px*/
+/* @media screen and (min-width: 358px) and (min-height: 778px) {
+} */
+
+/* For screen (width: 375px and more, height: 667px (in mind)*/
+/* @media screen and (min-width: 374px) {
+} */
+
+/* For screen (width: 375px and more, height: 812px*/
+@media screen and (min-width: 374px) and (min-height: 810px) {
+  #contact-me {
+    padding-top: 4vh;
+  }
+
+  .user-msg {
+    margin: 2.4rem auto;
+  }
+
+  .user-msg textarea {
+    line-height: 3.2ch;
+    background-image: linear-gradient(
+      transparent,
+      transparent calc(3.2ch - 1px),
+      #e7eff8 0px
+    );
+    background-size: 100% 3.2ch;
+  }
+
+  .cm-vert-btm {
+    font-size: 1.9rem;
+    margin-top: 1.8rem;
+  }
+
+  .userRespond {
+    height: 90%;
+    top: 4vh;
+  }
+}
+
+/* For screen (width: 414px and more, height: 736px (in mind)*/
+/* @media screen and (min-width: 412px) {
+} */
+
+/* For screen (width: 414px and more, height: 896px*/
+@media screen and (min-width: 412px) and (min-height: 894px) {
+  .user-msg textarea {
+    height: 72%;
+  }
+}
+
+/* ----Mobile-Landscape---- */
+/* Styles for mobiles in landscape mode that has min-height of 300px*/
+@media screen and (min-height: 300px) and (min-width: 568px) and (orientation: landscape) {
+  .user-msg textarea {
+    line-height: 2.8ch;
+    background-image: linear-gradient(
+      transparent,
+      transparent calc(2.8ch - 1px),
+      #e7eff8 0px
+    );
+    background-size: 100% 2.8ch;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 640px) and (orientation: landscape) {
+  .form {
+    margin-left: 10vw;
+  }
+
+  .cm-horiz-right {
+    margin-right: 14vw;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 360px*/
+@media screen and (min-height: 360px) and (min-width: 760px) and (orientation: landscape) {
+  .form {
+    margin-left: 18vw;
+  }
+
+  .cm-horiz-right {
+    margin-right: 18vw;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+@media screen and (min-height: 375px) and (min-width: 667px) and (orientation: landscape) {
+  .user-msg textarea {
+    height: 72%;
+  }
+
+  form button {
+    bottom: 4%;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 375px*/
+/* @media screen and (min-height: 375px) and (min-width: 812px) and (orientation: landscape) {
+} */
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+@media screen and (min-height: 414px) and (min-width: 736px) and (orientation: landscape) {
+  .form {
+    margin: auto;
+    margin-top: 2rem;
+  }
+}
+
+/* Styles for mobiles in landscape mode that has min-height of 414px*/
+/* @media screen and (min-height: 414px) and (min-width: 896px) and (orientation: landscape) {
+} */
